Add header and story

--- a/index.html
+++ b/index.html
@@ -16,9 +16,37 @@
     <header class="header">
         <div class="header-wrapper wrapper">
             <h1 class="main-header">Mistic</h1>
-            <h2 class="second-header">Hi, what is your dream?</h2>
+            <h2 class="second-header">What is your dream?</h2>
         </div>
     </header>
-    <div class="background"></div>
+    <main>
+        <section class="hero">
+            <div class="hero-wrapper wrapper">
+                <h3 class="hero-header">Hero</h3>
+            </div>
+        </section>
+        <section class="story">
+            <div class="story-wrapper wrapper">
+                <h3 class="third-header story-header">Our story</h3>
+                <h4 class="fourth-header">lorem lorem lorem</h4>
+                <div class="story-text-wrapper">
+                    <p class="story-paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque iusto corporis quibusdam magnam, dolores, quae consectetur vel, fugiat possimus temporibus aperiam odit dolor dolorem saepe quis qui reprehenderit magni, enim dignissimos voluptate labore. Quisquam modi deleniti sapiente, nulla facilis quasi est accusamus eum, atque corporis voluptatibus doloremque, error assumenda? Optio.
+                    </p>
+                    <p class="story-paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio deserunt exercitationem sed, natus libero dolores ex porro nobis totam nisi, maiores quos officia beatae eos id cupiditate error fugiat facilis amet dolorum reprehenderit. Suscipit asperiores odio dicta expedita tempore voluptates maxime, fuga, recusandae molestias iure facere officiis, porro nostrum molestiae! Laborum inventore dolores, provident, qui eligendi accusamus ipsam voluptatem itaque magni aliquam commodi eos impedit! Cumque fugiat architecto quae sint, illo rem odit vitae consequuntur ipsa amet sunt itaque natus autem, cum eaque vero. Repudiandae vel neque commodi, repellendus nostrum odio mollitia quo quam ea optio eaque cupiditate iusto, provident.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="gallery">
+            <div class="gallery-wrapper wrapper">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, odio.
+            </div>
+        </section>
+    </main>
+    <div class="background">
+        <div class="background-shadow"></div>
+    </div>
 </body>
 </html>
