--- a/index.html
+++ b/index.html
@@ -41,7 +41,24 @@
         </section>
         <section class="gallery">
             <div class="gallery-wrapper wrapper">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, odio.
+                <div class="gallery-background">
+                    <h3 class="third-header third-header-gallery">Our travels</h3>
+                    <h4 class="fourth-header fourth-header-gallery">lorem lorem lorem</h4>
+                    <div class="gallery-photos">
+                        <div class="photo first-photo">
+                            <img src="img/photography.jpg" alt="House and sea" />
+                        </div>
+                        <div class="photo second-photo">
+                            <img src="img/architecture.jpg" alt="Architecture" />
+                        </div>
+                        <div class="photo third-photo">
+                            <img src="img/hamburg.jpg" alt="Hamburg" />
+                        </div>
+                        <div class="photo fourth-photo">
+                            <img src="img/man.jpg" alt="Man" />
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
