--- a/index.html
+++ b/index.html
@@ -61,6 +61,68 @@
                 </div>
             </div>
         </section>
+        <section class="about-us">
+            <h3 class="about-us-header">About us</h3>
+            <div class="about-us-wrapper wrapper">
+                <div class="about-us-box">
+                    <img src="img/background-photo.jpg" />
+                    <div class="about-us-text">
+                        <h5 class="fifth-header">Stefan Nowy</h5>
+                        <p class="about-us-paragraph">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, accusantium.
+                        </p>
+                        <div class="social-icons">
+                            <a href="https://www.instagram.com/" target="_blank" title="Instagram">
+                                <span class="fab fa-instagram" aria-hidden="true"></span>
+                                <span class="sr-only">Instagram</span>
+                            </a>
+                            <a href="https://www.facebook.com/" target="_blank" title="Facebook">
+                                <span class="fab fa-facebook" aria-hidden="true"></span>
+                                <span class="sr-only">Facebook</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="about-us-box about-us-box-second">
+                    <div class="about-us-text">
+                        <h5 class="fifth-header">Stefan Nowy</h5>
+                        <p class="about-us-paragraph">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, accusantium.
+                        </p>
+                        <div class="social-icons">
+                            <a href="https://www.instagram.com/" target="_blank" title="Instagram">
+                                <span class="fab fa-instagram" aria-hidden="true"></span>
+                                <span class="sr-only">Instagram</span>
+                            </a>
+                            <a href="https://www.facebook.com/" target="_blank" title="Facebook">
+                                <span class="fab fa-facebook" aria-hidden="true"></span>
+                                <span class="sr-only">Facebook</span>
+                            </a>
+                        </div>
+                    </div>
+                    <img src="img/background-photo.jpg" />
+                </div>
+                <div class="about-us-box">
+                    <img src="img/background-photo.jpg" />
+                    <div class="about-us-text">
+                        <h5 class="fifth-header">Stefan Nowy</h5>
+                        <p class="about-us-paragraph">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, accusantium.
+                        </p>
+                        <div class="social-icons">
+                            <a href="https://www.instagram.com/" target="_blank" title="Instagram">
+                                <span class="fab fa-instagram" aria-hidden="true"></span>
+                                <span class="sr-only">Instagram</span>
+                            </a>
+                            <a href="https://www.facebook.com/" target="_blank" title="Facebook">
+                                <span class="fab fa-facebook" aria-hidden="true"></span>
+                                <span class="sr-only">Facebook</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <div class="background">
         <div class="background-shadow"></div>
