--- a/index.html
+++ b/index.html
@@ -47,15 +47,39 @@
                     <div class="gallery-photos">
                         <div class="photo first-photo">
                             <img src="img/photography.jpg" alt="House and sea" />
+                            <div class="photo-story">
+                                <h5 class="photo-story-header">Story header</h5>
+                                <p class="photo-story-paragraph">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam iure repellat numquam pariatur itaque ullam corrupti eligendi incidunt! Sed id numquam repudiandae accusamus, itaque veritatis maxime, fugiat mollitia ducimus, aspernatur animi quia dolorum veniam! Dignissimos non quis odio reiciendis quas recusandae totam facere dolorum hic illo assumenda magnam, amet molestiae sint. Adipisci illo, porro aut eius distinctio incidunt hic! Explicabo, veniam dolores ipsum aspernatur quae voluptates totam iure culpa dicta, blanditiis laborum ipsam neque, sit deserunt, eveniet eius consequuntur obcaecati unde? Maxime ducimus facilis natus officiis veniam, amet voluptatibus. Voluptatum ullam nobis praesentium esse corrupti voluptatibus sed harum, culpa dignissimos?
+                                </p>
+                            </div>
                         </div>
                         <div class="photo second-photo">
-                            <img src="img/architecture.jpg" alt="Architecture" />
+                            <img src="img/river.jpg" alt="Architecture" />
+                            <div class="photo-story">
+                                <h5 class="photo-story-header">Story header</h5>
+                                <p class="photo-story-paragraph">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam iure repellat numquam pariatur itaque ullam corrupti eligendi incidunt! Sed id numquam repudiandae accusamus, itaque veritatis maxime, fugiat mollitia ducimus, aspernatur animi quia dolorum veniam! Dignissimos non quis odio reiciendis quas recusandae totam facere dolorum hic illo assumenda magnam, amet molestiae sint. Adipisci illo, porro aut eius distinctio incidunt hic! Explicabo, veniam dolores ipsum aspernatur quae voluptates totam iure culpa dicta, blanditiis laborum ipsam neque, sit deserunt, eveniet eius consequuntur obcaecati unde? Maxime ducimus facilis natus officiis veniam, amet voluptatibus. Voluptatum ullam nobis praesentium esse corrupti voluptatibus sed harum, culpa dignissimos?
+                                </p>
+                            </div>
                         </div>
                         <div class="photo third-photo">
-                            <img src="img/hamburg.jpg" alt="Hamburg" />
+                            <img src="img/castle.jpg" alt="Castle" />
+                            <div class="photo-story">
+                                <h5 class="photo-story-header">Story header</h5>
+                                <p class="photo-story-paragraph">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam iure repellat numquam pariatur itaque ullam corrupti eligendi incidunt! Sed id numquam repudiandae accusamus, itaque veritatis maxime, fugiat mollitia ducimus, aspernatur animi quia dolorum veniam! Dignissimos non quis odio reiciendis quas recusandae totam facere dolorum hic illo assumenda magnam, amet molestiae sint. Adipisci illo, porro aut eius distinctio incidunt hic! Explicabo, veniam dolores ipsum aspernatur quae voluptates totam iure culpa dicta, blanditiis laborum ipsam neque, sit deserunt, eveniet eius consequuntur obcaecati unde? Maxime ducimus facilis natus officiis veniam, amet voluptatibus. Voluptatum ullam nobis praesentium esse corrupti voluptatibus sed harum, culpa dignissimos?
+                                </p>
+                            </div>
                         </div>
                         <div class="photo fourth-photo">
                             <img src="img/man.jpg" alt="Man" />
+                            <div class="photo-story">
+                                <h5 class="photo-story-header">Story header</h5>
+                                <p class="photo-story-paragraph">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam iure repellat numquam pariatur itaque ullam corrupti eligendi incidunt! Sed id numquam repudiandae accusamus, itaque veritatis maxime, fugiat mollitia ducimus, aspernatur animi quia dolorum veniam! Dignissimos non quis odio reiciendis quas recusandae totam facere dolorum hic illo assumenda magnam, amet molestiae sint. Adipisci illo, porro aut eius distinctio incidunt hic! Explicabo, veniam dolores ipsum aspernatur quae voluptates totam iure culpa dicta, blanditiis laborum ipsam neque, sit deserunt, eveniet eius consequuntur obcaecati unde? Maxime ducimus facilis natus officiis veniam, amet voluptatibus. Voluptatum ullam nobis praesentium esse corrupti voluptatibus sed harum, culpa dignissimos?
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
