Add RWD and footer

--- a/index.html
+++ b/index.html
@@ -147,7 +147,29 @@
                 </div>
             </div>
         </section>
+        <section class="social-icons-section">
+            <div class="social-icons-section-wrapper wrapper">
+                <a href="https://www.instagram.com/" target="_blank" title="Instagram">
+                    <span class="fab fa-instagram" aria-hidden="true"></span>
+                    <span class="sr-only">Instagram</span>
+                </a>
+                <a href="https://www.facebook.com/" target="_blank" title="Facebook">
+                    <span class="fab fa-facebook" aria-hidden="true"></span>
+                    <span class="sr-only">Facebook</span>
+                </a>
+                <a href="https://www.facebook.com/" target="_blank" title="Facebook">
+                    <span class="fab fa-facebook" aria-hidden="true"></span>
+                    <span class="sr-only">Facebook</span>
+                </a>
+            </div>
+        </section>
     </main>
+    <footer class="footer">
+        <div class="footer-wrapper wrapper">
+            Design inspiration: <a href="https://templated.co/" target="_blank">templated</a>
+            <br />Code: <a href="https://github.com/sfait" target="_blank">github</a>
+        </div>
+    </footer>
     <div class="background">
         <div class="background-shadow"></div>
     </div>
