Add photos and use autoprefixer

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <h3 class="about-us-header">About us</h3>
             <div class="about-us-wrapper wrapper">
                 <div class="about-us-box">
-                    <img src="img/background-photo.jpg" />
+                    <img src="img/man3.jpg" />
                     <div class="about-us-text">
                         <h5 class="fifth-header">Stefan Nowy</h5>
                         <p class="about-us-paragraph">
@@ -124,10 +124,10 @@
                             </a>
                         </div>
                     </div>
-                    <img src="img/background-photo.jpg" />
+                    <img src="img/man2.jpg" />
                 </div>
                 <div class="about-us-box">
-                    <img src="img/background-photo.jpg" />
+                    <img src="img/women.jpg" />
                     <div class="about-us-text">
                         <h5 class="fifth-header">Stefan Nowy</h5>
                         <p class="about-us-paragraph">
@@ -149,13 +149,13 @@
         </section>
         <section class="social-icons-section">
             <div class="social-icons-section-wrapper wrapper">
+                <a href="https://twitter.com/" target="_blank" title="Twitter">
+                    <span class="fab fa-twitter" aria-hidden="true"></span>
+                    <span class="sr-only">Twitter</span>
+                </a>
                 <a href="https://www.instagram.com/" target="_blank" title="Instagram">
                     <span class="fab fa-instagram" aria-hidden="true"></span>
                     <span class="sr-only">Instagram</span>
-                </a>
-                <a href="https://www.facebook.com/" target="_blank" title="Facebook">
-                    <span class="fab fa-facebook" aria-hidden="true"></span>
-                    <span class="sr-only">Facebook</span>
                 </a>
                 <a href="https://www.facebook.com/" target="_blank" title="Facebook">
                     <span class="fab fa-facebook" aria-hidden="true"></span>
