--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mistic</title>
+    <script src="https://unpkg.com/scrollreveal"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="css/normalize.css">
@@ -28,7 +29,7 @@
         <section class="story">
             <div class="story-wrapper wrapper">
                 <h3 class="third-header story-header">Our story</h3>
-                <h4 class="fourth-header">lorem lorem lorem</h4>
+                <h4 class="fourth-header story-fourth-header">lorem lorem lorem</h4>
                 <div class="story-text-wrapper">
                     <p class="story-paragraph">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque iusto corporis quibusdam magnam, dolores, quae consectetur vel, fugiat possimus temporibus aperiam odit dolor dolorem saepe quis qui reprehenderit magni, enim dignissimos voluptate labore. Quisquam modi deleniti sapiente, nulla facilis quasi est accusamus eum, atque corporis voluptatibus doloremque, error assumenda? Optio.
