--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="header-wrapper wrapper">
             <h1 class="main-header">Mistic</h1>
-            <h2 class="second-header">What is your dream?</h2>
+            <h2 class="second-header">O czym marzysz?</h2>
         </div>
     </header>
     <main>
@@ -28,14 +28,15 @@
         </section>
         <section class="story">
             <div class="story-wrapper wrapper">
-                <h3 class="third-header story-header">Our story</h3>
-                <h4 class="fourth-header story-fourth-header">lorem lorem lorem</h4>
+                <h3 class="third-header story-header">Nasza historia</h3>
+                <h4 class="fourth-header story-fourth-header">pieniądze możesz odzyskać, czasu nigdy</h4>
                 <div class="story-text-wrapper">
                     <p class="story-paragraph">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque iusto corporis quibusdam magnam, dolores, quae consectetur vel, fugiat possimus temporibus aperiam odit dolor dolorem saepe quis qui reprehenderit magni, enim dignissimos voluptate labore. Quisquam modi deleniti sapiente, nulla facilis quasi est accusamus eum, atque corporis voluptatibus doloremque, error assumenda? Optio.
+                        Nasza historia rozpoczęła się 1 sierpnia 2017 roku, gdy nasz przyjaciel Stefan w firmowej kuchni zdradził nam swoje plany na przyszłość. Byliśmy wtedy młodymi pracownikami jednej z Warszawskich korporacji, a Mordor był naszym drugim domem. Tego pamiętnego wtorku, gdy usłyszeliśmy od naszego przyjaciela: "Zamierzam rzucić pracę i zwiedzić cały świat!", sami również zaczęliśmy się zastanawiać nad własnym życiem.
                     </p>
                     <p class="story-paragraph">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio deserunt exercitationem sed, natus libero dolores ex porro nobis totam nisi, maiores quos officia beatae eos id cupiditate error fugiat facilis amet dolorum reprehenderit. Suscipit asperiores odio dicta expedita tempore voluptates maxime, fuga, recusandae molestias iure facere officiis, porro nostrum molestiae! Laborum inventore dolores, provident, qui eligendi accusamus ipsam voluptatem itaque magni aliquam commodi eos impedit! Cumque fugiat architecto quae sint, illo rem odit vitae consequuntur ipsa amet sunt itaque natus autem, cum eaque vero. Repudiandae vel neque commodi, repellendus nostrum odio mollitia quo quam ea optio eaque cupiditate iusto, provident.
+                        Nasze obecne życie to ciągła podróż. Dziś jesteśmy tutaj, a jutro gdzie indziej. Nigdy nie planujemy z wyprzedzeniem większym niż najbliższy miesiąc. Do tej pory zwiedziliśmy kilka państw, nocowaliśmy w zamkach i pod gołym niebem, pływaliśmy w morzu i wspinaliśmy się na szczyty, poznaliśmy wielu wspaniałych ludzi i takich, których wolimy unikać.
+                        <br />Jednak najważniejsze jest to, że zgromadziliśmy wiele świetnych wspomnień!
                     </p>
                 </div>
             </div>
@@ -43,8 +44,8 @@
         <section class="gallery">
             <div class="gallery-wrapper wrapper">
                 <div class="gallery-background">
-                    <h3 class="third-header third-header-gallery">Our travels</h3>
-                    <h4 class="fourth-header fourth-header-gallery">lorem lorem lorem</h4>
+                    <h3 class="third-header third-header-gallery">Nasze podróże</h3>
+                    <h4 class="fourth-header fourth-header-gallery">zamki, pałace, oceany, lasy</h4>
                     <div class="gallery-photos">
                         <div class="photo first-photo">
                             <img src="img/photography.jpg" alt="House and sea" />
@@ -92,9 +93,9 @@
                 <div class="about-us-box">
                     <img src="img/man3.jpg" />
                     <div class="about-us-text">
-                        <h5 class="fifth-header">Stefan Nowy</h5>
+                        <h5 class="fifth-header">Stefan</h5>
                         <p class="about-us-paragraph">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, accusantium.
+                            Programista Pythona, który miał dosyć kodowania w biurowym zaciszu i postanowił zwiedzić świat.
                         </p>
                         <div class="social-icons">
                             <a href="https://www.instagram.com/" target="_blank" title="Instagram">
@@ -110,9 +111,9 @@
                 </div>
                 <div class="about-us-box about-us-box-second">
                     <div class="about-us-text">
-                        <h5 class="fifth-header">Stefan Nowy</h5>
+                        <h5 class="fifth-header">Adam</h5>
                         <p class="about-us-paragraph">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, accusantium.
+                            Analityk biznesowy, który szuka pomysłu na własny biznes.
                         </p>
                         <div class="social-icons">
                             <a href="https://www.instagram.com/" target="_blank" title="Instagram">
@@ -130,9 +131,9 @@
                 <div class="about-us-box">
                     <img src="img/women.jpg" />
                     <div class="about-us-text">
-                        <h5 class="fifth-header">Stefan Nowy</h5>
+                        <h5 class="fifth-header">Magda</h5>
                         <p class="about-us-paragraph">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, accusantium.
+                            Pracownica działu HR, która lubi czytać książki i grać w gry planszowe.
                         </p>
                         <div class="social-icons">
                             <a href="https://www.instagram.com/" target="_blank" title="Instagram">
