--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +13,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/app.js"></script>
 </head>
+
 <body>
     <header class="header">
         <div class="header-wrapper wrapper">
@@ -31,10 +33,12 @@
                 <h4 class="fourth-header story-fourth-header">pieniądze możesz odzyskać, czasu nigdy</h4>
                 <div class="story-text-wrapper">
                     <p class="story-paragraph">
-                        Nasza historia rozpoczęła się 1 sierpnia 2017 roku, gdy nasz przyjaciel Stefan w firmowej kuchni zdradził nam swoje plany na przyszłość. Byliśmy wtedy młodymi pracownikami jednej z Warszawskich korporacji, a Mordor był naszym drugim domem. Tego pamiętnego wtorku, gdy usłyszeliśmy od naszego przyjaciela: "Zamierzam rzucić pracę i zwiedzić cały świat!", sami również zaczęliśmy się zastanawiać nad własnym życiem.
+                        Nasza historia rozpoczęła się 1 sierpnia 2017 roku, gdy nasz przyjaciel Stefan w firmowej kuchni zdradził nam swoje plany na przyszłość. Byliśmy wtedy młodymi pracownikami jednej z Warszawskich korporacji, a Mordor był naszym
+                        drugim domem. Tego pamiętnego wtorku, gdy usłyszeliśmy od naszego przyjaciela: "Zamierzam rzucić pracę i zwiedzić cały świat!", sami również zaczęliśmy się zastanawiać nad własnym życiem.
                     </p>
                     <p class="story-paragraph">
-                        Nasze obecne życie to ciągła podróż. Dziś jesteśmy tutaj, a jutro gdzie indziej. Nigdy nie planujemy z wyprzedzeniem większym niż najbliższy miesiąc. Do tej pory zwiedziliśmy kilka państw, nocowaliśmy w zamkach i pod gołym niebem, pływaliśmy w morzu i wspinaliśmy się na szczyty, poznaliśmy wielu wspaniałych ludzi i takich, których wolimy unikać.
+                        Nasze obecne życie to ciągła podróż. Dziś jesteśmy tutaj, a jutro gdzie indziej. Nigdy nie planujemy z wyprzedzeniem większym niż najbliższy miesiąc. Do tej pory zwiedziliśmy kilka państw, nocowaliśmy w zamkach i pod gołym
+                        niebem, pływaliśmy w morzu i wspinaliśmy się na szczyty, poznaliśmy wielu wspaniałych ludzi i takich, których wolimy unikać.
                         <br />Jednak najważniejsze jest to, że zgromadziliśmy wiele świetnych wspomnień!
                     </p>
                 </div>
@@ -49,36 +53,47 @@
                         <div class="photo first-photo">
                             <img src="img/photography.jpg" alt="House and sea" />
                             <div class="photo-story">
-                                <h5 class="photo-story-header">Story header</h5>
+                                <h5 class="photo-story-header">Ośrodek nad morzem</h5>
                                 <p class="photo-story-paragraph">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam iure repellat numquam pariatur itaque ullam corrupti eligendi incidunt! Sed id numquam repudiandae accusamus, itaque veritatis maxime, fugiat mollitia ducimus, aspernatur animi quia dolorum veniam! Dignissimos non quis odio reiciendis quas recusandae totam facere dolorum hic illo assumenda magnam, amet molestiae sint. Adipisci illo, porro aut eius distinctio incidunt hic! Explicabo, veniam dolores ipsum aspernatur quae voluptates totam iure culpa dicta, blanditiis laborum ipsam neque, sit deserunt, eveniet eius consequuntur obcaecati unde? Maxime ducimus facilis natus officiis veniam, amet voluptatibus. Voluptatum ullam nobis praesentium esse corrupti voluptatibus sed harum, culpa dignissimos?
+                                    Od dawna planowaliśmy udać się w to miejsce. Sławny ośrodek wypoczynkowy nad brzegiem morza. Jednak w momencie przybycia na miejsce okazało się, że nasza rezerwacja została anulowana z nieznanych powodów, a w samym
+                                    budynku brak wolnych pokoi.
+                                    <br />Mieliśmy własny namiot, więc rozbiliśmy obóz na okolicznej polanie. Wieczorem okazało się, że był to świetny pomysł i nasze ognisko przyciągnęło mieszkańców ośrodka. Impreza trwała do rana.
                                 </p>
                             </div>
                         </div>
                         <div class="photo second-photo">
                             <img src="img/river.jpg" alt="Architecture" />
                             <div class="photo-story">
-                                <h5 class="photo-story-header">Story header</h5>
+                                <h5 class="photo-story-header">Sąsiad z pokoju obok</h5>
                                 <p class="photo-story-paragraph">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam iure repellat numquam pariatur itaque ullam corrupti eligendi incidunt! Sed id numquam repudiandae accusamus, itaque veritatis maxime, fugiat mollitia ducimus, aspernatur animi quia dolorum veniam! Dignissimos non quis odio reiciendis quas recusandae totam facere dolorum hic illo assumenda magnam, amet molestiae sint. Adipisci illo, porro aut eius distinctio incidunt hic! Explicabo, veniam dolores ipsum aspernatur quae voluptates totam iure culpa dicta, blanditiis laborum ipsam neque, sit deserunt, eveniet eius consequuntur obcaecati unde? Maxime ducimus facilis natus officiis veniam, amet voluptatibus. Voluptatum ullam nobis praesentium esse corrupti voluptatibus sed harum, culpa dignissimos?
+                                    Tego dnia od rana padał deszcz, a my znudzeni wyczekiwaliśmy polepszenia pogody.
+                                    <br />Około południa ktoś zapukał do naszych drzwi. Była to dziewczyna z recepcji, która przyszła nas zapytać, czy nie widzieliśmy ostatnio naszego sąsiada z pokoju obok. Mężczyzna podobno zaginął i nikt nie wie co
+                                    się z
+                                    nim stało. Poznaliśmy go kilka dni wcześniej, jednak od tamtej pory go nie widzieliśmy.
+                                    <br />Wieczorem wyszliśmy na zakupy. Dla skrócenia sobie drogi postanowiliśmy przejść przez pobliski park, a w nim zobaczyliśmy rozbity namiot. Podeszliśmy bliżej i zobaczyliśmy naszego sąsiada. Po krótkiej
+                                    wymianie zdań
+                                    dowiedzieliśmy się, że postanowił spróbować życia na łonie natury. Po powrocie do hotelu poinformowaliśmy obsługę o jego miejscu pobytu.
                                 </p>
                             </div>
                         </div>
                         <div class="photo third-photo">
                             <img src="img/castle.jpg" alt="Castle" />
                             <div class="photo-story">
-                                <h5 class="photo-story-header">Story header</h5>
+                                <h5 class="photo-story-header">Stary pałac</h5>
                                 <p class="photo-story-paragraph">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam iure repellat numquam pariatur itaque ullam corrupti eligendi incidunt! Sed id numquam repudiandae accusamus, itaque veritatis maxime, fugiat mollitia ducimus, aspernatur animi quia dolorum veniam! Dignissimos non quis odio reiciendis quas recusandae totam facere dolorum hic illo assumenda magnam, amet molestiae sint. Adipisci illo, porro aut eius distinctio incidunt hic! Explicabo, veniam dolores ipsum aspernatur quae voluptates totam iure culpa dicta, blanditiis laborum ipsam neque, sit deserunt, eveniet eius consequuntur obcaecati unde? Maxime ducimus facilis natus officiis veniam, amet voluptatibus. Voluptatum ullam nobis praesentium esse corrupti voluptatibus sed harum, culpa dignissimos?
+                                    To miał być zwykły dzień, gdy zadzwonił telefon. Po drugiej stronie słuchawki kobieta zaproponowała nam darmową wycieczkę w góry wraz ze zwiedzaniem starego pałacu. W zamian oczekiwała jedynie, że napiszemy o
+                                    wyprawie na naszym blogu. Zgodziliśmy się i następnego dnia wraz z przewodnikiem udaliśmy się w drogę.
+                                    <br />Sam pałac wyglądał jak rudera, która może w każdej chwili się zawalić. Przewodnik próbował nas namówić na wejście do niego, jednak odmówiliśmy i wróciliśmy do naszego pokoju w hotelu.
+                                    <br />Następnego dnia przeczytaliśmy w gazetach, że w nocy dach pałacu się zawalił.
                                 </p>
                             </div>
                         </div>
                         <div class="photo fourth-photo">
                             <img src="img/man.jpg" alt="Man" />
                             <div class="photo-story">
-                                <h5 class="photo-story-header">Story header</h5>
+                                <h5 class="photo-story-header">Wyprawa w góry</h5>
                                 <p class="photo-story-paragraph">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam iure repellat numquam pariatur itaque ullam corrupti eligendi incidunt! Sed id numquam repudiandae accusamus, itaque veritatis maxime, fugiat mollitia ducimus, aspernatur animi quia dolorum veniam! Dignissimos non quis odio reiciendis quas recusandae totam facere dolorum hic illo assumenda magnam, amet molestiae sint. Adipisci illo, porro aut eius distinctio incidunt hic! Explicabo, veniam dolores ipsum aspernatur quae voluptates totam iure culpa dicta, blanditiis laborum ipsam neque, sit deserunt, eveniet eius consequuntur obcaecati unde? Maxime ducimus facilis natus officiis veniam, amet voluptatibus. Voluptatum ullam nobis praesentium esse corrupti voluptatibus sed harum, culpa dignissimos?
+                                    Wyprawa w góry, gdy ma się zepsuty kompas nie jest dobrym pomysłem, nigdy. Może lepiej nie wracać do tej historii...
                                 </p>
                             </div>
                         </div>
@@ -175,4 +190,5 @@
         <div class="background-shadow"></div>
     </div>
 </body>
+
 </html>
