Update headers and add alt for photos

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
             <h3 class="about-us-header">About us</h3>
             <div class="about-us-wrapper wrapper">
                 <div class="about-us-box">
-                    <img src="img/man3.jpg" />
+                    <img src="img/man3.jpg" alt="Man" />
                     <div class="about-us-text">
-                        <h5 class="fifth-header">Stefan</h5>
+                        <h4 class="about-us-text-header">Stefan</h4>
                         <p class="about-us-paragraph">
                             Programista Pythona, który miał dosyć kodowania w biurowym zaciszu i postanowił zwiedzić świat.
                         </p>
@@ -125,7 +125,7 @@
                 </div>
                 <div class="about-us-box about-us-box-second">
                     <div class="about-us-text">
-                        <h5 class="fifth-header">Adam</h5>
+                        <h4 class="about-us-text-header">Adam</h4>
                         <p class="about-us-paragraph">
                             Analityk biznesowy, który szuka pomysłu na własny biznes.
                         </p>
@@ -140,12 +140,12 @@
                             </a>
                         </div>
                     </div>
-                    <img src="img/man2.jpg" />
+                    <img src="img/man2.jpg" alt="Man" />
                 </div>
                 <div class="about-us-box">
-                    <img src="img/women.jpg" />
+                    <img src="img/women.jpg" alt="Women" />
                     <div class="about-us-text">
-                        <h5 class="fifth-header">Magda</h5>
+                        <h4 class="about-us-text-header">Magda</h4>
                         <p class="about-us-paragraph">
                             Pracownica działu HR, która lubi czytać książki i grać w gry planszowe.
                         </p>
